Having issues with icon; working on local storage

--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
           <div id="headliner">
             <h2 id="city-name"></h2>
             <p id="currentTemp"></p>
-            <br>
             <p id="currentHum"></p>
             <p id="currentWindSpeed"></p>
             <p id="currentUVI"></p>
             <img id="weather-indicator">
             </div>
             <section id="five-day">
-             <h2 id="h2-week">Five Day Forecast:</h2>
+             <h2 id="h2-week"></h2>
              
-             <div id="dailyForecast">
+             <div id="weeklyForecast">
         
              </div>
            </section>
